2012-05-23  Ganesh Gopalasubramanian  <Ganesh.Gopalasubramanian@amd.com>

	Backport from 2012-05-03 mainline r187075

	* config/i386/driver-i386.c (host_detect_local_cpu): Reset
	has_fma4 for AMD processors with both fma3 and fma4 support.

2012-05-22  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53408
	* tree-vect-loop.c (vectorizable_induction): Properly check
	the restriction that we cannot handle induction results from
	the inner loop outside of the outer loop.

2012-05-21  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/53436
	* omp-low.c (omp_build_component_ref): New function.
	(build_receiver_ref, build_sender_ref, create_task_copyfn): Use it.

	PR tree-optimization/53366
	* tree-vect-slp.c (vect_supported_load_permutation_p): Don't shortcut
	tests if complex_numbers == 2, but there are non-complex number loads
	too.

	PR tree-optimization/53409
	* tree-vect-loop.c (vect_analyze_loop_operations): Don't check
	vinfo_for_stmt (op_def_stmt) if op_def_stmt isn't inside loop.

	PR tree-optimization/53410
	* fold-const.c (fold_binary_loc): Use build_zero_cst (type)
	instead of build_int_cst (type, 0) where vector types might be
	involved.

2012-05-21  Joseph Myers  <joseph@codesourcery.com>

	PR c/53418
	* c-typeck.c (build_conditional_expr): Remove C_MAYBE_CONST_EXPR
	from folded operands before wrapping another around the
	conditional expression.

2012-05-21  Dave Boutcher  <daveboutcher@gmail.com>
	    Patrick Marlier  <patrick.marlier@gmail.com>

	* trans-mem.c (ipa_tm_transform_clone): Transform functions with
	indirect calls.

2012-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2012-05-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/53416
	* config/i386/i386.md (UNSPEC_RDRAND): Renamed to ...
	(UNSPECV_RDRAND): This.
	(rdrand<mode>_1): Updated.

2012-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2012-05-20  H.J. Lu  <hongjiu.lu@intel.com>
